######################################################################################
### 1) Where do we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(core_library)
SET(SAMPLE_SRCS ${SAMPLE_SRCS} PARENT_SCOPE)

######################################################################################
